# xapp-rust

./: .gitignore  Cargo.toml  Gir.toml  README.md
examples/icon_chooser_button/: Cargo.toml
examples/icon_chooser_button/src/: main.rs
src/: lib.rs
src/auto/: enums.rs  favorite_info.rs  favorites.rs  gtk_window.rs  icon_chooser_button.rs  icon_chooser_dialog.rs  kbd_layout_controller.rs  mod.rs  monitor_blanker.rs  object.rs  object_manager_client.rs  object_proxy.rs  object_skeleton.rs  preferences_window.rs  stack_sidebar.rs  status_icon.rs  status_icon_interface.rs  status_icon_interface_proxy.rs  status_icon_interface_skeleton.rs  status_icon_monitor.rs  style_manager.rs  versions.txt
xapp-sys/: Cargo.toml  Gir.toml  build.rs
xapp-sys/src/: lib.rs
xapp-sys/tests/: abi.rs  constant.c  layout.c
