[package]
name = "xapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
bitflags = "1.0"

[dependencies.ffi]
package = "xapp-sys"
path = "./xapp-sys"

[dependencies.cairo-rs]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.cairo-sys-rs]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/gtk-rs-core" # all gtk-rs sys crates are in the sys repository

[dependencies.pango]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.pango-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk3-rs"

[dependencies.gtk-sys]
git = "https://github.com/gtk-rs/gtk3-rs"
